--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
   <section>
     <h2>📄 Documents</h2>
-    <a href="assets/your_resume.pdf" download>Download My Resume (PDF)</a>
+    <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" download>Download My Resume (DOCX)</a>
   </section>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Zachary M. Ostrow</p>
   </footer>
 </body>
 </html>
