--- a/index.html
+++ b/index.html
@@ -3,36 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio!!!</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <title>Zachary Ostrow | Cybersecurity Student</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <h1>Welcome to My Personal Website</h1>
-    <p>Here you can find my videos, images, and documents.</p>
+    <div class="container">
+      <h1>Zachary Ostrow</h1>
+      <p>Computer Science & Cybersecurity Enthusiast | University of Maryland</p>
+    </div>
   </header>
 
-  <section>
-    <h2>📸 Image Gallery</h2>
-    <img src="assets/your_image.jpg" alt="Sample Image" class="media" />
+  <section class="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m a Computer Science major with a focus on Cybersecurity, AI, and software engineering. I build secure, scalable, and innovative solutions using Python, Java, C, and Linux. Currently working on ReconAI, a tool to automate financial workflows with AI and QuickBooks.</p>
+    </div>
   </section>
 
-  <section>
-    <h2>🎞️ Video Showcase</h2>
-    <video class="media" controls>
-      <source src="assets/your_video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <section class="projects">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <ul>
+        <li><strong>ReconAI</strong> – AI-powered bookkeeping assistant with QuickBooks integration</li>
+        <li><strong>80check2-threaded</strong> – C multithreaded log checker using Pthreads</li>
+        <li><strong>maec</strong> – Makefile parser and executor with dependency resolution in C</li>
+      </ul>
+    </div>
   </section>
 
-  <section>
-    <h2>📄 Documents</h2>
-    <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" download>Download My Resume (DOCX)</a>
+  <section class="resume">
+    <div class="container">
+      <h2>📄 Resume</h2>
+      <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" download>Download My Resume </a>
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 Zachary M. Ostrow</p>
+    <div class="container">
+      <p>© 2025 Zachary Ostrow | <a href="mailto:ZOstrow05@gmail.com">Contact Me</a></p>
+    </div>
   </footer>
 </body>
 </html>
+
+
+ 
 
