--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Zachary Ostrow1 | Cybersecurity Student</title>
+  <title>Zachary Ostrow | Cybersecurity Student</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
       <h2>Featured Projects</h2>
       <ul>
         <li><strong>ReconAI</strong> – AI-powered bookkeeping assistant with QuickBooks integration</li>
-        <li><strong>80check2-threaded</strong> – C multithreaded log checker using Pthreads</li>
+        <li><strong>80check2-threaded</strong> – 11C multithreaded log checker using Pthreads</li>
         <li><strong>maec</strong> – Makefile parser and executor with dependency resolution in C</li>
       </ul>
     </div>
