--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 </div>
             </div>
 
-            <a href="#" class="download-btn" onclick="alert('Resume download functionality would be implemented here')">Download PDF Resume</a>
+            <a href="#" class="download-btn" onclick="assets/Zachary_Ostrow_Resume.docx">Download PDF Resume</a>
         </div>
     </div>
 
