--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div class="contact-icon">💼</div>
                     <div>
                         <strong>LinkedIn</strong><br>
-                        linkedin.com/in/zachary-ostrow-87b4592a6/
+                        <a href="linkedin.com/in/zachary-ostrow-87b4592a6/" class="download-btn" download>Linkedin</a>
                     </div>
                 </div>
                 
@@ -523,8 +523,7 @@
                     </ul>
                 </div>
             </div>
-
-            <a href="assets/Zachary_Ostrow_Resume.docx" class="btn" download>Download PDF Resume</a>
+            <a href="assets/Zachary_Ostrow_Resume.docx" class="download-btn" download>Download Word Resume</a>
         </div>
     </div>
 
