--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div class="contact-icon">💼</div>
                     <div>
                         <strong>LinkedIn</strong><br>
-                        <a href="linkedin.com/in/zachary-ostrow-87b4592a6/" class="download-btn" download>Linkedin</a>
+                        linkedin.com/in/zachary-ostrow-87b4592a6/
                     </div>
                 </div>
                 
