--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                     </ul>
                 </div>
             </div>
-            <a href="assets/Zachary_Ostrow_Resume.docx" class="download-btn" download>Download Word Resume</a>
+            <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" class="download-btn" download>Download Word Resume</a>
         </div>
     </div>
 
