--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
+             background: linear-gradient(135deg, #001f4d 0%, #000d33 100%);
             color: white;
             padding: 2rem;
             text-align: center;
