--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <div class="container">
         <header>
             <h1>Zachary M. Ostrow
-                <img src="asset/image.png" alt="Profile" class="circle-photo">
+                <img src="asset/photo.png" alt="Profile" class="circle-photo">
             </h1>
             <p class="subtitle">Computer Science Student | Cybersecurity Specialist</p>
         </header>
