--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         }
         .circle-photo {
             width: 200px;         
-            height: 400px;        
+            height: 200px;        
             object-fit: cover;     
             border-radius: 50%;     
             border: 3px solid #333; 
-            margin-left: 100px;
+            margin-right: 100px;
     }
 
         .container {
