--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             object-fit: cover;     
             border-radius: 50%;     
             border: 3px solid #333; 
-            margin-right: 100px;
+            margin-left: 200px;
+            margin-up: 50px;
+            
     }
 
         .container {
