--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             object-fit: cover;     
             border-radius: 50%;     
             border: 3px solid #333; 
-            margin-left: 200px;
-            margin-up: 50px;
+            margin-left: 400px;
+            margin-up: 200px;
             
     }
 
@@ -314,9 +314,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Zachary M. Ostrow
-                <img src="assets/linkpic.jpeg" class="circle-photo">
-            </h1>
+            <h1>Zachary M. Ostrow </h1> <img src="assets/linkpic.jpeg" class="circle-photo">
             <p class="subtitle">Computer Science Student | Cybersecurity Specialist</p>
         </header>
 
