--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             border-radius: 50%;     
             border: 3px solid #333; 
             margin-left: 800px;
-            margin-up: 200px;
         }
 
         .container {
@@ -467,10 +466,9 @@
         </div>
 
         <div id="resume" class="tab-content">
-            <h2 class="section-title">Resume</h2>
-            <div class="resume-section">
+            <h2 class="section-title">Resume 
                 <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" class="download-btn" download>Download Word Resume</a>
-            </div>
+            </h2>
             <div class="resume-section">
                 <h3>Education</h3>
                 <div class="card">
