--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             border-radius: 50%;     
             border: 3px solid #333; 
             margin-left: 800px;
+            margin-up: 500px;
         }
 
         .container {
@@ -254,6 +255,7 @@
             text-decoration: none;
             display: inline-block;
             margin-top: 2rem;
+            margin-left: 2000px;
         }
 
         .download-btn:hover {
