--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
             height: 200px;        
             object-fit: cover;     
             border-radius: 50%;     
-            border: 3px solid #333; 
-            margin-left: 800px;
-            margin-up: 500px;
         }
 
         .container {
@@ -255,7 +252,7 @@
             text-decoration: none;
             display: inline-block;
             margin-top: 2rem;
-            margin-left: 2000px;
+            float: right;
         }
 
         .download-btn:hover {
