--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
             display: inline-block;
             margin-top: 2rem;
             float: right;
+            margin-down: 200px;
         }
 
         .download-btn:hover {
