--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
-            margin-top: 2rem;
+            margin-top: .5rem;
             float: right;
             margin-down: 50px;
+            position: relative;
+            top: -20px;
         }
 
         .download-btn:hover {
