--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             width: 200px;         
             height: 200px;        
             object-fit: cover;     
-            border-radius: 50%;     
+            border-radius: 50%; 
+            marign-right: 500px;
         }
 
         .container {
@@ -255,7 +256,7 @@
             float: right;
             margin-down: 50px;
             position: relative;
-            top: -20px;
+            top: -30px;
         }
 
         .download-btn:hover {
