--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             height: 200px;        
             object-fit: cover;     
             border-radius: 50%; 
-            marign-right: 500px;
+            align-items: right;
         }
 
         .container {
