--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #0077b6 0%, #000d33 100%);
+            background: url('assets/img1.avif') no-repeat center center fixed;
+            background-size: cover;
             min-height: 100vh;
         }
         .circle-photo {
