--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #001f4d 0%, #000d33 100%);
+            background: linear-gradient(135deg, #3498db, #2980b9);
             color: white;
             padding: 2rem;
             text-align: center;
