--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             object-fit: cover;     
             border-radius: 50%; 
             align-items: right;
+            boarder: 3px solid black;
         }
 
         .container {
@@ -320,8 +321,8 @@
           <div style="display: flex; align-items: center; justify-content: center; gap: 20px; flex-wrap: wrap;">
                 <img src="assets/linkpic.jpeg" class="circle-photo">
                 <div>
-                      <h1 style="margin: 0;">Zachary M. Ostrow</h1>
-                      <p class="subtitle">Computer Science Student | Cybersecurity Specialist</p>
+                      <h1 style="margin: 0; font-weight: bold;">Zachary M. Ostrow</h1>
+                      <p class="subtitle" style="font-weight: bold;">Computer Science Student | Cybersecurity Specialist</p>
                 </div>
           </div>
         </header>
