--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             object-fit: cover;     
             border-radius: 50%; 
             align-items: right;
-            boarder: 3px solid black;
         }
 
         .container {
@@ -37,7 +36,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #3498db, #2980b9);
+            background: linear-gradient(135deg, #0077b6, #0077b6);
             color: white;
             padding: 2rem;
             text-align: center;
