--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: url('assets/img1.avif') no-repeat center center fixed;
+            background: url('assets/img2.jpg') no-repeat center center fixed;
             background-size: cover;
             min-height: 100vh;
         }
