--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
         <div id="resume" class="tab-content">
             <h2 class="section-title">Resume 
-                <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" class="download-btn" download>Download Word Resume</a>
+                <a href="assets/Zachary_Ostrow_Resume_V1.3.docx" class="download-btn" download>Download Resume</a>
             </h2>
             <div class="resume-section">
                 <h3>Education</h3>
