Update project items in index.html
Added new project descriptions for 'Make File Creator' and 'Examination Database Emulator'.

--- a/index.html
+++ b/index.html
@@ -407,9 +407,21 @@
             </div>
 
             <div class="project-item">
+                <div class="project-title">Make File Creator</div>
+                <div class="project-tech">C</div>
+                <p> I engineered an automated compilation tool for C programs leveraging linked lists and dynamic memory management to optimize efficiency. Additionally, I implemented robust low-level process controls and file I/O operations, ensuring flawless execution with zero warnings or memory leaks.</p>
+            </div>
+
+            <div class="project-item">
                 <div class="project-title">Space Invaders Game</div>
                 <div class="project-tech">Java | Object-Oriented Programming</div>
                 <p>Developed a comprehensive simulation of the classic Space Invaders game utilizing advanced object-oriented programming concepts including inheritance, polymorphism, and various sorting algorithms. The project demonstrates proficiency in Java programming and game development principles.</p>
+            </div>
+
+            <div class="project-item">
+                <div class="project-title">Examination Database Emulator </div>
+                <div class="project-tech">Java</div>
+                <p>I designed and implemented a modular exam management system grounded in object-oriented principles such as inheritance, polymorphism, and encapsulation. The system accommodates five unique question types, providing scalable compatibility for more than 100 distinct exams.</p>
             </div>
 
             <div class="project-item">
